--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -45,6 +45,15 @@ body {
     padding: 0;
     background: #202E41;
 }
+
+h2.title{
+    font-size: 80px;
+    line-height: 120px;
+    font-family: "DP Céline";
+    text-transform: uppercase;
+}
+
+h2.title {}
 .layout{
     background: url('../images/BG-items.webp');
     background-size: cover;
@@ -80,6 +89,8 @@ body {
     height: 100vh;
     background: url(../images/spacejoy-YI2YkyaREHk-unsplash.jpg);
     background-position-y: center;
+    background-size: cover;
+    padding: 80px 0;
 }
 
 .banner:after{
@@ -90,4 +101,45 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+}
+.banner .proj_mouth .swiper-button-next, .banner .proj_mouth .swiper-button-prev {
+    width: 64px;
+    top: calc(100% - 32px);
+}
+.banner .proj_mouth .swiper-button-next:after, .banner .proj_mouth .swiper-button-prev:after {
+    content: '';
+    background-image: url(../images/arrow.svg);
+    width: 64px;
+    height: 64px;
+}
+
+.banner .proj_mouth .swiper-button-prev {
+    left: var(--swiper-navigation-sides-offset,calc(100% - 144px));
+}
+.banner .proj_mouth .swiper-button-prev:after {
+    transform: rotate(180deg);
+}
+
+.banner .proj_mouth .item {
+    display: flex;
+    align-items: end;
+}
+
+.banner .proj_mouth .item .content p{
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0;
+}
+
+.banner .proj_mouth .item .content h3{
+    font-size: 80px;
+    line-height: 120px;
+    font-family: "DP Céline";
+    height: 240px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin: 0;
 }
