--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -1,7 +1,7 @@
 :root {
     --main: #D5CCC3;
     --blue: #202E41;
-  }
+}
 
 @font-face {
     font-family: 'DP Céline';
@@ -31,7 +31,7 @@
     font-style: normal;
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
     font-size: 16px;
@@ -46,15 +46,28 @@ body {
     background: #202E41;
 }
 
-h2.title{
+h2.title {
     font-size: 80px;
     line-height: 120px;
     font-family: "DP Céline";
     text-transform: uppercase;
+    margin: 0;
+    letter-spacing: 2px;
 }
 
-h2.title {}
-.layout{
+.swiper-button-next:after,
+.swiper-button-prev:after {
+    content: '';
+    background-image: url(../images/arrow.svg);
+    width: 64px;
+    height: 64px;
+}
+
+.swiper-button-prev:after {
+    transform: rotate(180deg);
+}
+
+.layout {
     background: url('../images/BG-items.webp');
     background-size: cover;
     background-repeat: no-repeat;
@@ -62,13 +75,14 @@ h2.title {}
 }
 
 /* header */
-.top_head .nav_item{
+.top_head .nav_item {
     font-family: "PlusJakartaSans-SemiBold";
     text-decoration: none;
     color: var(--main);
     cursor: pointer;
 }
-.top_head .menu_right{
+
+.top_head .menu_right {
     gap: 24px;
 }
 
@@ -76,7 +90,8 @@ h2.title {}
 .body_head {
     padding: 140px 0 100px;
 }
-.body_head h1{
+
+.body_head h1 {
     font-size: 180px;
     text-align: center;
     font-family: "DP Céline";
@@ -93,7 +108,7 @@ h2.title {}
     padding: 80px 0;
 }
 
-.banner:after{
+.banner:after {
     content: '';
     width: 100%;
     height: 100%;
@@ -102,36 +117,33 @@ h2.title {}
     top: 0;
     left: 0;
 }
-.banner .proj_mouth .swiper-button-next, .banner .proj_mouth .swiper-button-prev {
+
+.banner .proj_mouth .swiper-button-next,
+.banner .proj_mouth .swiper-button-prev,
+section.Our_Services .services_list .swiper-button-next,
+section.Our_Services .services_list .swiper-button-prev {
     width: 64px;
     top: calc(100% - 32px);
 }
-.banner .proj_mouth .swiper-button-next:after, .banner .proj_mouth .swiper-button-prev:after {
-    content: '';
-    background-image: url(../images/arrow.svg);
-    width: 64px;
-    height: 64px;
+
+.banner .proj_mouth .swiper-button-prev,
+section.Our_Services .services_list .swiper-button-prev {
+    left: var(--swiper-navigation-sides-offset, calc(100% - 144px));
 }
 
-.banner .proj_mouth .swiper-button-prev {
-    left: var(--swiper-navigation-sides-offset,calc(100% - 144px));
-}
-.banner .proj_mouth .swiper-button-prev:after {
-    transform: rotate(180deg);
-}
 
 .banner .proj_mouth .item {
     display: flex;
     align-items: end;
 }
 
-.banner .proj_mouth .item .content p{
+.banner .proj_mouth .item .content p {
     font-size: 16px;
     line-height: 24px;
     margin: 0;
 }
 
-.banner .proj_mouth .item .content h3{
+.banner .proj_mouth .item .content h3 {
     font-size: 80px;
     line-height: 120px;
     font-family: "DP Céline";
@@ -142,4 +154,70 @@ h2.title {}
     -webkit-box-orient: vertical;
     overflow: hidden;
     margin: 0;
+}
+
+/* our service */
+section.Our_Services {
+    padding: 204px 0;
+}
+
+section.Our_Services .services_list {
+    padding: 80px 0;
+}
+
+section.Our_Services .services_list .item:nth-child(3n + 1) img {
+    border-radius: 120px 0px 0px 0px;
+}
+
+section.Our_Services .services_list .item:nth-child(3n + 2) img {
+    border-radius: 0px 0px 120px 0px;
+}
+
+section.Our_Services .services_list .item:nth-child(3n + 3) img {
+    border-radius: 0px 0px 0px 120px;
+}
+
+section.Our_Services .services_list .item p {
+    color: #BEB0A2;
+    font-size: 36px;
+    line-height: 54px;
+    font-family: 'DP Céline';
+}
+
+section.Our_Services .services_list .swiper-slide-active.item p {
+    color: var(--main);
+}
+
+.swiper-pagination.swiper-pagination-progressbar.swiper-pagination-horizontal {
+    width: 75%;
+    top: var(--swiper-pagination-progressbar-size, calc(100% - 4px));
+    background: rgba(213, 204, 195, 0.5);
+    height: var(--swiper-pagination-progressbar-size, 2px);
+}
+
+.swiper-pagination.swiper-pagination-progressbar.swiper-pagination-horizontal span.swiper-pagination-progressbar-fill {
+    background: #f7f5f3 !important;
+    border-radius: 10px;
+    margin-top: -1px;
+    height: 4px !important;
+}
+
+/* trending */
+section.trending h2.title span {
+    font-family: 'DP Céline';
+    font-size: 80px;
+    font-style: italic;
+    font-weight: 100;
+    line-height: 120px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+section.trending h2.title.line_1 {
+    margin-bottom: -24px;
+    margin-left: -300px;
+}
+
+section.trending h2.title.line_2 {
+    margin-top: -24px;
+    margin-right: -100px;
 }
