--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -280,17 +280,46 @@ h2.title span {
 }
 
 /* scroll annimation  */
-.banner .image {
+
+.image {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 420px;
+    height: 280px;
+    overflow: hidden;
+    transition: width 0.5s, height 0.5s;
+}
+
+.image img {
+    width: 1400px;
+    height: 860px;
+    object-fit: cover;
+}
+
+/* .container, .swiper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.content {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+} */
+
+/* .banner .image {
     transform: scale(0.3);
     transition: transform 0.3s ease;
 }
 
 .banner .content, .banner .swiper-button-next, .banner .swiper-button-prev {
-    /* opacity: 0; */
     transform: translateY(200px);
-    
     transition: opacity 1.5s ease, transform 1.5s ease;
-    /* transition-delay: 3s; */
 }
 
 .banner.scrolled .image img {
@@ -298,7 +327,6 @@ h2.title span {
 }
 
 .banner.revealed  .content, .banner.revealed  .swiper-button-next, .banner.revealed  .swiper-button-prev {
-    /* opacity: 1; */
     transform: translateY(0);
 }
 
@@ -315,8 +343,6 @@ h2.title span {
 .topimg{
     width: 842px;
     height: 420px;
-    /* justify-content: center; */
-    /* transform: translateY(30px); */
 }
 .center-left, .center-right, .bottom-left{
     width: 375px;
@@ -352,7 +378,7 @@ h2.title span {
 .cover-image.bottom-left {
     bottom: 0;
     right: 0;
-}
+} */
 
 
 /*************************** our service **************************/
