--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -193,7 +193,7 @@ h2.title span {
 
 .banner {
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     /* background: url(../images/spacejoy-YI2YkyaREHk-unsplash.jpg); */
     background-position-y: center;
     background-size: cover;
@@ -233,23 +233,38 @@ h2.title span {
 }
 
 .banner .proj_mouth .item {
-    display: flex;
+    /* display: flex;
     align-items: flex-end; 
-    position: relative;
+    position: relative; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 420px;
+    height: 280px;
+    overflow: hidden;
+    transition: width 0.5s, height 0.5s;
 }
 .banner .proj_mouth .image{
-    position: absolute;
+    /* position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 0; 
-    overflow: hidden; 
-    /* scale: 0.3; */
-}
-.banner .proj_mouth img{
+    overflow: hidden;  */
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner .proj_mouth img{
+    /* width: 100%;
+    height: 100%;
+    object-fit: cover; */
+    width: 1400px;
+    height: 860px;
     object-fit: cover;
 }
 
@@ -298,21 +313,7 @@ h2.title span {
     object-fit: cover;
 }
 
-/* .container, .swiper {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.content {
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-} */
-
-/* .banner .image {
+.banner .image {
     transform: scale(0.3);
     transition: transform 0.3s ease;
 }
@@ -378,7 +379,7 @@ h2.title span {
 .cover-image.bottom-left {
     bottom: 0;
     right: 0;
-} */
+}
 
 
 /*************************** our service **************************/
