--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -192,16 +192,8 @@ h2.title span {
 /***************************************** banner slide *******************************/
 
 .banner {
-<<<<<<< HEAD
-    width: 100%;
-    height: 200vh;
-    /* background: url(../images/spacejoy-YI2YkyaREHk-unsplash.jpg); */
-    background-position-y: center;
-    background-size: cover;
-=======
     
-    height: 100vh;
->>>>>>> d23241eedee2fca43747a007cb9cc0800d9e0d7a
+    height: 200vh;
     padding: 0;
     position: relative;
     display: flex;
@@ -222,45 +214,6 @@ h2.title span {
     left: var(--swiper-navigation-sides-offset, calc(100% - 188px));
 }
 
-<<<<<<< HEAD
-.banner .proj_mouth .item {
-    /* display: flex;
-    align-items: flex-end; 
-    position: relative; */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 420px;
-    height: 280px;
-    overflow: hidden;
-    transition: width 0.5s, height 0.5s;
-}
-.banner .proj_mouth .image{
-    /* position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0; 
-    overflow: hidden;  */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.banner .proj_mouth img{
-    /* width: 100%;
-    height: 100%;
-    object-fit: cover; */
-    width: 1400px;
-    height: 860px;
-    object-fit: cover;
-}
-
-=======
->>>>>>> d23241eedee2fca43747a007cb9cc0800d9e0d7a
 .banner .proj_mouth .item .content{
     z-index: 999;
     position: relative;
@@ -286,30 +239,6 @@ h2.title span {
     color: #D5CCC3;
 }
 
-<<<<<<< HEAD
-/* scroll annimation  */
-
-.image {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 420px;
-    height: 280px;
-    overflow: hidden;
-    transition: width 0.5s, height 0.5s;
-}
-
-.image img {
-    width: 1400px;
-    height: 860px;
-    object-fit: cover;
-}
-
-.banner .image {
-    transform: scale(0.3);
-    transition: transform 0.3s ease;
-=======
 .image-wrapper {
     position: relative;
     width: 100%;
@@ -323,6 +252,7 @@ h2.title span {
     left: 50%;
     width: 420px;
     height: 280px;
+    will-change: transform;
     transform: translate(-50%, -50%);
     overflow: hidden;
     transition: width 0.5s ease, height 0.5s ease;
@@ -333,9 +263,10 @@ h2.title span {
     left: 50%;
     width: 1400px; /* Kích thước đầy đủ của ảnh */
     height: 860px; /* Kích thước đầy đủ của ảnh */
+    will-change: transform;
     transform: translate(-50%, -50%);
+    transition: transform 0.5s ease-in-out;
 
->>>>>>> d23241eedee2fca43747a007cb9cc0800d9e0d7a
 }
 
 /* .banner .content, .banner .swiper-button-next, .banner .swiper-button-prev {
@@ -349,61 +280,7 @@ h2.title span {
 
 /* .banner.revealed  .content, .banner.revealed  .swiper-button-next, .banner.revealed  .swiper-button-prev {
     transform: translateY(0);
-<<<<<<< HEAD
-}
-
-.cover-images {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.cover-image {
-    position: absolute;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-.topimg{
-    width: 842px;
-    height: 420px;
-}
-.center-left, .center-right, .bottom-left{
-    width: 375px;
-    height: 287px;
-}
-.bottom-right {
-    width: 750px;
-    height: 430px;
-}
-
-.cover-image.topimg {
-    top: 0;
-    left: 0;
-}
-
-.cover-image.center-left {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.cover-image.center-right {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.cover-image.bottom-right {
-    bottom: 0;
-    right: 0;
-}
-
-.cover-image.bottom-left {
-    bottom: 0;
-    right: 0;
-}
-=======
 } */
->>>>>>> d23241eedee2fca43747a007cb9cc0800d9e0d7a
 
 
 /*************************** our service **************************/
